--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://4kVision:My0Cluster@docsubcluster.nddlnlm.mongodb.net/?retryWrites=true&w=majority&appName=DocSubCluster
-JWT_SECRET=secret_jwt_key_@123
-EMAIL_USER=nihareekamohanty33@gmail.com
-EMAIL_PASS=xrwp calt lqvt edxl
+MONGO_URI= YOUR_MONGODB_URL
+JWT_SECRET= YOUR_JWT_SECRET
+EMAIL_USER= YOUR_EMAIL
+EMAIL_PASS= YOUR_EMAIL_PASS
